# cape

./: .env.hooks.example  .gitignore  AGENTS.md  LICENSE.md  README.md
ai_docs/: aviationstack-documentation.md  cc-hooks-guide.md  cc-hooks-reference.md  cc-output-styles.md  cc-slash-commands.md  cc-subagents.md  elixir-style-guide.md  oc-agents.md  oc-custom-commands.md  rc-custom-modes.md  rc-slash-commands.md  rc-using-modes.md  typer-tutorial.md  uv-scripts-guide.md
app/: .env.example  README.md  pyproject.toml
cape-adw/: README.md  pyproject.toml
cape-adw/cape_adw/: __init__.py  adw.py  cli.py
cape-adw/tests/: __init__.py  test_cape_adw.py
cape-cli/: .gitignore  README.md  pyproject.toml
cape-cli/src/cape_cli/: agent.py  cape_tui.tcss  database.py  paths.py  pid_manager.py  tui.py  utils.py  workflow.py  workflow_daemon.py  workflow_launcher.py
cape-cli/tests/: test_agent.py  test_database.py  test_models.py  test_paths.py  test_pid_manager.py  test_process_utils.py  test_state_manager.py  test_state_watcher.py  test_tui.py  test_tui_delete.py  test_utils.py  test_workflow.py
cape-worker/: README.md  __init__.py  cli.py  config.py  database.py  worker.py
cape_cli/: .gitignore  pyproject.toml
methodology/: development-methodology.md  quick-reference.md
migrations/: 001_create_cape_issues_tables.sql  002_seed_test_data.sql  003_add_worker_assignment.sql  004_update_worker_locking.sql  005_add_title_to_cape_issues.sql  006_add_cape_comments_columns.sql  README.md
scripts/: copy-files.py  create-symlinks.ps1  create-symlinks.py  create-symlinks.sh  install-app.py  install-cli.py  install-coders.py  (+1 more)
(+228 files in other folders)
