[project]
name = "cape-adw"
version = "0.1.0"
description = "CAPE ADW - Agent Development Workflow"
readme = "README.md"
authors = [{ name = "Robert Pratt", email = "robert@bpong.me" }]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
]
classifiers = ["Programming Language :: Python :: 3.12"]

[dependency-groups]
dev = ["pytest>=7.0.0"]

[project.scripts]
cape-adw = "cape_adw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
